# the-sql-alchemist

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  LICENSE  README.md  config.py  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.cursor/rules/: sync-github.mdc
.github/workflows/: ci.yml
data/: flights.csv
docs/: DEPENDENCIES.md  DEPLOYMENT.md  GITHUB_SETUP.md
notebooks/: main.ipynb
scripts/: capture_screenshots.py  docker-entrypoint.sh  enrich_flights_dates.py
src/: app.py  core.py  health.py  i18n.py  main.py
tests/: conftest.py  test_config.py  test_core.py  test_health.py  test_i18n.py
